add company logic, delete super user role
